<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="140dp"
    android:padding="2dp"
    android:layout_marginHorizontal="8dp"
    android:orientation="vertical"
    android:background="@drawable/drawable_forecast_item">

    <TextView
        android:id="@+id/weekDay"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/day"/>

    <TextView
        android:id="@+id/dateDay"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/date"/>

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/p"
        android:textSize="13sp"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatureMax_city"/>

    <TextView
        android:id="@+id/minTemperature"
        android:layout_gravity="center"
        android:textColor="@color/p"
        android:textSize="13sp"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatureMin_city"/>

    <TextView
        android:id="@+id/descriptionDay"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/description_day"/>
</LinearLayout>