<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:id="@+id/loading"
        android:visibility="visible"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:backgroundTint="@color/white" />

    <RelativeLayout
        android:id="@+id/rLay_top"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/drawable_main_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            tools:text="@string/city_name" />

        <TextView
            android:id="@+id/temperature_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/temperature_city"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_climate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature_city"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/quicksand"
            tools:text="@string/description_day"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_day"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignTop="@id/city_name"
            android:layout_alignParentEnd="true"
            android:src="@drawable/nublado_day" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_day"
            android:layout_alignStart="@id/image_day"
            android:layout_alignEnd="@id/image_day"
            android:layout_toEndOf="@+id/txt_climate"
            android:fontFamily="@font/quicksand"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:text="@string/hour" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lLay_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/rLay_bottom"
        app:layout_constraintTop_toBottomOf="@id/rLay_top">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/quicksand"
                android:text="@string/prediction"
                android:textColor="@color/gray"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/reload" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            tools:itemCount="1"
            tools:listitem="@layout/forecast_item"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rLay_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/drawable_main_bottom"
        app:layout_constraintTop_toBottomOf="@id/lLay_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/drawable_items_bottom"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humitity" />

                <TextView
                    android:id="@+id/humitity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/humidity_porcentage"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/drawable_items_bottom"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/wind_velocity"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind_velocity" />

                <TextView
                    android:id="@+id/windVelocity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/wind_velocity_kmh"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/drawable_items_bottom"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/sunset"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sunset" />

                <TextView
                    android:id="@+id/sunsetHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/sunset_hour"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            android:background="@drawable/drawable_items_bottom"
            android:orientation="vertical"
            android:padding="14sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/sunrise"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sunrise" />

                <TextView
                    android:id="@+id/sunriseHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/sunrise_hour"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>