<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/init"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/drawable_init"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_5"
        android:layout_width="336dp"
        android:layout_height="336dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        app:lottie_rawRes="@raw/rainandsun"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/weather_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/animation_5"
        android:layout_alignStart="@id/animation_5"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/weather_api"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tutorial_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_api"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/tutorial_txt"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorial_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_search"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="14dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/search"
        android:textColor="#5747F2" />

</RelativeLayout>